2009-11-19  Chris Fleizach  <cfleizach@apple.com>

Reviewed by Darin Adler.

        WAI-ARIA roles not supported on image map <area>
        https://bugs.webkit.org/show_bug.cgi?id=31525

        * accessibility/aria-used-on-image-maps-expected.txt: Added.
        * accessibility/aria-used-on-image-maps.html: Added.
        * platform/gtk/Skipped:
        * platform/win/Skipped:

Canonical link: https://commits.webkit.org/42624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51195 268f45cc-cd09-0410-ab3c-d52691b4dbfc